src/pages/dashboard/Dashboard.module.css
.header {
  padding: 0.5rem var(--mobile-pad);
  z-index: 10;
  position: sticky;
  top: 0;
  background-color: var(--bg-color);
  transition: transform 0.4s ease-out;
}

@media (min-width: 768px) {
  .header {
    padding: 1rem var(--tab-pad) 0.2rem;
  }
}

@media (min-width: 1280px) {
  .header {
    padding-bottom: 0;
    padding-top: 0;
  }
}

.mobile_topBar {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: sticky;
  transition: transform 0.2s ease-in;
  top: 51px;
  background-color: var(--bg-color);
  padding-top: 0.5rem;
}

@media (min-width: 1280px) {
  .mobile_topBar {
    display: none;
  }
}

.mobile_topBar--scrollHide {
  transform: translateY(-96px);
}

@media (min-width: 768px) {
  .searchWrapper {
    display: none;
  }
}

@media (min-width: 1280px) {
  .sideBar--mobileOnly {
    display: none;
  }
}

.flexWrapper {
  display: flex;
  flex-direction: column;
}

@media (min-width: 768px) {
  .flexWrapper {
    padding: 0 var(--tab-pad) var(--tab-pad);
  }
}

@media (min-width: 1280px) {
  .flexWrapper {
    flex-direction: row;
    padding-bottom: 0;
  }
}

.sideBarWrapper {
  display: none;
}

@media (min-width: 1280px) {
  .sideBarWrapper {
    display: block;
    position: sticky;
    top: 60px;
    max-height: 100vh;
    overflow-y: scroll;
    flex-shrink: 0;
    scrollbar-width: thin;
    overscroll-behavior: contain;
    scrollbar-color: #667586 #001935;
    border-right: 1px solid #5e5eccc9;
  }
}

